[package]
name = "qconnection"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { workspace = true }
tokio = { workspace = true, features = ["rt", "time", "macros", "sync"] }
qbase = { workspace = true }
qrecovery = { workspace = true }
qcongestion = { workspace = true }
qunreliable = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
rustls = { workspace = true }
log = { workspace = true }
deref-derive = { workspace = true }
dashmap = { workspace = true }

[target.'cfg(not(gm_quic_no_qudp))'.dependencies]
qudp = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(gm_quic_no_qudp)'] }
